--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 
 {
-    "name": "candybar",
+    "name": "ringer",
     "version": "0.0.1",
     "author": "Henrik Joreteg <henrik@andyet.net>",
-    "description": "Self-contained, self-rendering, call status UI for web apps",
+    "description": "Ringtone player for att.js",
     "dependencies": {
         "jade": "",
         "uglify-js": "1.x",
-        "underscore": "",
-        "colors": "",
-        "yetify": ""
+        "colors": ""
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/att-innovate/CandyBar.git"
+        "url": "https://github.com/att-innovate/ringer.js.git"
     },
-    "keywords": ["telephony", "browser", "jade"],
-    "main": "candybar.js"
+    "keywords": ["telephony", "browser"],
+    "main": "build/ringer.js"
 }
